Finalizando a parte de escolha a sua e escolha seu componentes CSS

--- a/index.html
+++ b/index.html
@@ -43,24 +43,25 @@
         </section>
         <!-- Choose your -->
         <section>
-            <div class="container">
+            <h2 class="h2-escolha">Escolha a sua<span>.</span></h2>
+            <div class="container-escolha-a-sua">
                 <!-- migic might -->
                 <div>
-                    <img src="/assets/img/bike-1.jpg" alt="esta é magic might com o valor de R$ 2499">
-                    <h2>magic might</h2>
-                    <p>R$ 2499</p>
+                    <img class="img-escolha" src="/assets/img/bike-1.jpg" alt="esta é magic might com o valor de R$ 2499">
+                    <h2 class="h2-img-escolha">magic might</h2>
+                    <p class="p-escolha">R$ 2499</p>
                 </div>
                 <!-- migic might -->
                 <div>
-                    <img src="/assets/img/bike-2.jpg" alt="esta é magic might com o valor de R$ 2499">
-                    <h2>nimbus stark</h2>
-                    <p>R$ 4999</p>
+                    <img class="img-escolha" src="/assets/img/bike-2.jpg" alt="esta é magic might com o valor de R$ 2499">
+                    <h2 class="h2-img-escolha">nimbus stark</h2>
+                    <p class="p-escolha">R$ 4999</p>
                 </div>
                 <!-- migic might -->
                 <div>
-                    <img src="/assets/img/bike-3.jpg" alt="esta é magic might com o valor de R$ 2499">
-                    <h2>Nebula Cosmic</h2>
-                    <p>R$ 3999</p>
+                    <img class="img-escolha" src="/assets/img/bike-3.jpg" alt="esta é magic might com o valor de R$ 2499">
+                    <h2 class="h2-img-escolha">Nebula Cosmic</h2>
+                    <p class="p-escolha">R$ 3999</p>
                 </div>
             </div>
         </section>
@@ -69,24 +70,24 @@
             <div class="container-tecnologia-avancada">
                 <div>
                     <h3>tecnologia avançada</h3>
-                    <h2>voce escolhe as suas cores e componentes<span>.</span></h2>
-                    <p>Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-                    <a href="#">escolha um modelo</a>
+                    <h2 class="h2-tecnologia">voce escolhe as suas cores e componentes<span>.</span></h2>
+                    <p class="p-tecnologia">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                    <a class="a-tecnologia" href="#">escolha um modelo</a>
                     <!-- conateiner motor com rastreador -->
                     <div class="container-motor-rastreador">
                         <div class="box-motor">
-                            <h2>motor eletrico</h2>
-                            <p>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                            <h2 class="h2-motor">motor eletrico</h2>
+                            <p p class="p-box-escolha">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
                         </div> 
                         <div class="box-rastreador">
-                            <h2>rastreador</h2>
-                            <p>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                            <h2 class="h2-rastreador">rastreador</h2>
+                            <p class="p-box-escolha">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
                         </div> 
                     </div>
                 </div>
-            </div>
-            <div class="container-imagem-tecnologia-avancada">
-                <img src="/assets/img/ferramentas.jpg" alt="">
+                <div class="container-imagem">
+                    <img class="img-tecnologia" src="/assets/img/ferramentas.jpg" alt="">
+                </div>
             </div>
         </section>
         <!-- Nossos parceiros -->
